# super-search-rust

./: .gitignore  Cargo.toml  README.md
src/: app.rs  main.rs  persistence.rs  search.rs
