[package]
name = "ssearch"
version = "0.1.0"
authors = ["Prashant <prashantbarahi@gmail.com>"]
edition = "2018"
description = "Super Search"
repository = "https://github.com/realpacific/super-search-rust"
keywords = ["search", "ssearch", "super-search"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prettytable-rs = "^0.8"
clap = "2.33.0"
webbrowser = "0.5.2"
url= "2.1.0"
